--- a/book-store/src/index.css
+++ b/book-store/src/index.css
@@ -25,7 +25,16 @@ body {
   width: 50px;
   height: 50px;
   position: absolute;
+  right: 1.5em;
+  margin-right: 1.3em;
+}
+
+.cartItems{
+  position: absolute;
   right: 1em;
+  bottom: 1em;
+  font-size: 1.3em;
+  color: #ffffff;
 }
 
 img{
@@ -52,11 +61,36 @@ img{
   width: 40px;
 }
 
-
+.product{
+  box-shadow: 7px 7px 5px black;
+}
 
 img:hover{
   transform: scale(1.05);
 }
+
+.checkoutItem{
+  display: flex;
+  margin: 1.5em;
+}
+
+.checkoutItem > img{
+  width: 10%;
+  margin: auto 1em;
+}
+
+.checkoutItem > span{
+  margin: auto 1em;
+  font-size: 1.5em;
+}
+
+.checkoutItem > input{
+  width: 5%;
+  margin: auto 1em;
+  font-size: 1.5em;
+}
+
+
 
 
 
